spec/.test/config/valid/only_factories.php
<?php

return [
    'factories' => [
        'id1' => new Test\TestFactory('factory31'),
        'id2' => new Test\TestFactory('factory32'),
    ],
];
