spec/.test/config/invalid/isect/tags/factories.php
<?php

return [
    'factories' => [
        'id' => function () {},
    ],
    'tags' => [
        'id' => [
            'id1' => [],
        ],
    ],
];
